<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFEB3B"
    android:gravity="center">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:textColor="#040404"
        android:textSize="20sp"
        android:text="@string/edtitle" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="353dp"
        android:layout_height="198dp"
        android:layout_below="@id/titulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/logopizza" />

    <EditText
        android:id="@+id/nameuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:hint="@string/edt_user"
        android:inputType="text"
        android:textColorHint="#020202" />

    <EditText
        android:id="@+id/namepassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameuser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:hint="@string/edt_password"
        android:inputType="textPassword"
        android:textColorHint="#020202" />

    <Button
        android:id="@+id/botonlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/namepassword"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="2"
        android:padding="12dp"
        android:text="@string/btn_logear" />

</RelativeLayout>