<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaLogeo">

    <TextView
        android:id="@+id/notificacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/txt_datos" />

    <Button
        android:id="@+id/btn1op"
        android:layout_width="196dp"
        android:layout_height="227dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="200dp"
        android:drawableBottom="@drawable/imgpizzas"
        android:onClick="pizza"
        android:text="Button"
        app:strokeColor="#171616" />

    <Button
        android:id="@+id/btn2op"
        android:layout_width="196dp"
        android:layout_height="227dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="205dp"
        android:drawableBottom="@drawable/imgbebida"
        android:text="Button" />

    <TextView
        android:id="@+id/opc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/btn1op"
        android:layout_marginLeft="70dp"
        android:text="@string/txt_opc1" />

    <TextView
        android:id="@+id/opc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/btn1op"
        android:layout_marginLeft="270dp"
        android:text="@string/txt_opc2" />

</RelativeLayout>